changes in 1.4.2.014
* Optimized web url requests
* Fixed editions file and tests
changes in 1.4.2.013
* Bug 480 Filtering sets in quick filter is broken - when multiple match
* Bug 494 - error when processing with multi-color color indicator
* Updated to Magic Origins
changes in 1.4.2.012
* Bug 478 Filtering English is broken
changes in 1.4.2.011
* Bug 474 Problem with Color Identity Colorless filtering out too many cards
* Added edition aliases field in set editor (preferences)
* Renamed: Duel Decks: Elspeth vs. Kiora|DDO||March 2015|Starter|Duel Decks||Duel Decks: Kiora vs. Elspeth
* Added: Modern Masters 2015 Edition|MM2||May 2015|Online|||Modern Masters 2015
* Added: Tempest Remastered|TPR||May 2015|Online|||
changes in 1.4.2.010
* Update to fix update issues
changes in 1.4.2.009
* Remove lock in refresh which is causing UI lag
* Fixed race condition in loading collections which can cause data loss
changes in 1.4.2.007
* Bug 459 export not working in latest version, stack overflow
* More fixed to MagicCardMarket prices provider
changes in 1.4.2.006
* Fixed issues with refreshing of views (introduced 1.4.2.004)
* Fixed issue with inserting of cards in main collection (introduced 1.4.2.004)
* Added MagicCardMarket prices scrubber (credits Bjoern Schmidt)
* Fixed layout of Info page
* Fixed bug in currency showing in Info page for non dollar currency
changes in 1.4.2.005
* Bug 454 "Show Library" button in "Draw" view does nothing
* Color column now will show images
* Fixed CMC cost for 2/B type mana (is 2 before was 1)
* Removed columns for X mana cost in mana curve chart
* Support for Color Indicator field (For color identity)
changes in 1.4.2.004
* Bug 452 Laggy changes in "Card Navigation"
* Bug 437 Card Navigator does not update
* Bug 444 Lockups
changes in 1.4.2.003
* Bug 446 Adding Cards Using Keyboard Only
* Bug 444 UI Refresh issues and slowness when using quick filter 
* When using quick filter now top card is selected automatically